<resources>
    <string name="app_name">FirstApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="login">Sign in</string>
    <string name="emailaddress">Email</string>
    <string name="register_txt_link">Register</string>
    <string name="register_txt">Don\'t have an account?</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="createAccount">Create Account</string>
    <string name="logout">Logout</string>

    <string name="loream">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="myintroduction">Solution-driven Android Application developer with some years of commercial experience that includes leading technical teams across all phases of software system development from requirements gathering, design, and coding to testing and deployment. Well-versed in mobile-based application development with an ability to perform in-depth analysis of project components and rapidly identify and eliminate software issues.</string>
    <string name="achievements">Built an Android Application for different national clients like Nepal Life Insurance company which includes wire framing designs, code optimization and defining different roles to our team member.</string>

    <string name="workexperience">Built an Android Application by consuming REST API implementing latest technical frameworks for wiring and maintaining clean code principle.


            \n<b>Tasks Performed:</b>\n
•	Implemented updated Android SDK for application development.\n
•	Developed wire framing and UMLs and used MVP with Dagger2 for Dependency Injection.\n
•	Used reactive Android/Java following observer and observable pattern.\n
•	Used Mockito and Espresso for Unit and UI testing.</string>

    <string name="contactme"><b>Email: </b> suman.khatiwada@hotmail.com \n <b>Mobile Number:</b> +16417810415 \n <b>Address:</b> 1000N 4th Street Fairfield, Iowa</string>


    <string-array name="hollywoodmovies">

        <item>Star Wars: The Force Awakens</item>
        <item>Jurassic World</item>
        <item>The Avengers</item>
        <item>Furious 7</item>
        <item>Avengers: Age of Ultron</item>
        <item>Frozen</item>
        <item>Beauty and the Beast</item>
        <item>The Fate of the Furious</item>
        <item>Iron Man 3</item>
        <item>Star Wars: The Force Awakens</item>
    </string-array>
    <string-array name="beautyproducts">
        <item>Beauty Product 1</item>
        <item>Beauty Product 2</item>
        <item>Beauty Product 3</item>
        <item>Beauty Product 4</item>
        <item>Beauty Product 5</item>
        <item>Beauty Product 6</item>
        <item>Beauty Product 7</item>
        <item>Beauty Product 8</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
