<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sumankhatiwada.firstapp.day1.MainActivity">

    <LinearLayout
        android:id="@+id/linear_hostHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.5"
            android:text="@string/host"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:text="@string/port"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_editTextHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_hostHeader"
        android:weightSum="3">

        <EditText
            android:id="@+id/et_host"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtview_Username"
        android:layout_below="@+id/linear_editTextHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_margin="8dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/editText_Username"
        android:layout_below="@id/txtview_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/txtview_Password"
        android:layout_below="@+id/editText_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_margin="8dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtview_Password"
        android:singleLine="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_Password"
        android:text="@string/login"
        />
</RelativeLayout>
