<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativelayout_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/sp_16">

                <ImageView
                    android:id="@+id/imageViewbg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/walmart_logo" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_16">

                <LinearLayout
                    android:id="@+id/mainloginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/usernamelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_emailaddress"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/textinput_height"
                            android:gravity="center_vertical"
                            >

                            <EditText
                                android:id="@+id/editText_UserName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/emailaddress"
                                android:inputType="textEmailAddress"
                                android:paddingRight="@dimen/dp_16"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded,UnknownIdInLayout" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/passwordlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/textinput_height"
                            android:gravity="center_vertical"
                            >

                            <EditText
                                android:id="@+id/editText_UserPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginRight="8dp"
                                android:layout_toEndOf="@+id/imageView2"
                                android:layout_toRightOf="@+id/imageView2"
                                android:background="@null"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded,UnknownIdInLayout" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_16"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@android:color/holo_blue_light"
                        android:elevation="2dp"
                        android:text="@string/login"
                        android:textSize="@dimen/sp_14"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                    <TextView
                        android:id="@+id/forgetpasswordTxtview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/dp_16"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:padding="@dimen/dp_8"
                        android:text="@string/forgotPassword"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <FrameLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/registerTxtviewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/register_txt"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/registerTxtview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="0dp"
                        android:layout_toEndOf="@+id/registerTxtviewLabel"
                        android:layout_toRightOf="@+id/registerTxtviewLabel"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:text="@string/register_txt_link"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </FrameLayout>

        </RelativeLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
