<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="100dp"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/sp_16">

                <ImageView
                    android:id="@+id/imageViewbg"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher_foreground" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"

                android:layout_margin="@dimen/dp_16">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/mainloginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout

                        android:id="@+id/firstNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_firstName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/textinput_height"
                            android:gravity="center_vertical"
                            >

                            <EditText
                                android:id="@+id/edittext_firstName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/firstName"
                                android:inputType="textEmailAddress"
                                android:paddingRight="@dimen/dp_16"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded,UnknownIdInLayout" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/lastNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_lastName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/textinput_height"
                            android:gravity="center_vertical"
                            >

                            <EditText
                                android:id="@+id/edittext_lastName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/lastName"
                                android:inputType="textEmailAddress"
                                android:paddingRight="@dimen/dp_16"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded,UnknownIdInLayout" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/usernamelayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_emailaddress"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/textinput_height"
                            android:gravity="center_vertical"
                            >

                            <EditText
                                android:id="@+id/editText_UserName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/emailaddress"
                                android:inputType="textEmailAddress"
                                android:paddingRight="@dimen/dp_16"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded,UnknownIdInLayout" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/passwordlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/textinput_height"
                            android:gravity="center_vertical"
                            >

                            <EditText
                                android:id="@+id/editText_UserPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginRight="8dp"
                                android:layout_toEndOf="@+id/imageView2"
                                android:layout_toRightOf="@+id/imageView2"
                                android:background="@null"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textSize="14sp"
                                tools:ignore="RtlHardcoded,UnknownIdInLayout" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_create_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_16"
                        android:layout_marginLeft="@dimen/dp_16"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@android:color/holo_blue_light"
                        android:elevation="2dp"
                        android:text="@string/createAccount"
                        android:textSize="@dimen/sp_14"
                        tools:ignore="HardcodedText,UnusedAttribute" />

                    <!--<TextView-->
                        <!--android:id="@+id/forgetpasswordTxtview"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--android:layout_marginBottom="@dimen/dp_16"-->
                        <!--android:background="?attr/selectableItemBackground"-->
                        <!--android:clickable="true"-->
                        <!--android:padding="@dimen/dp_8"-->
                        <!--android:text="@string/forgotPassword"-->
                        <!--android:textColor="@android:color/black"-->
                        <!--android:textSize="14sp" />-->
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
